[package]
name = "firefox-web-app-launcher"
version = "1.0.0"
edition = "2021"
authors = ["PowerSnail <hj@powersnail>"]
description = "Using Firefox's profile to launch separate instances of the browser."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
directories = "4.0.1"
